test/SILOptimizer/closure_lifetime_fixup_undef.code
// RUN: not %target-language-frontend %s -sil-verify-all -c 2>&1 | %FileCheck %s

// Report the error but don't crash.
// CHECK: error: closure captures 'stringList' before it is declared

class TestUndefined {
  private var stringList: [String]!

  fn dontCrash(strings: [String]) {
    assert(stringList.allSatisfy({ $0 == stringList.first!}))
    immutable stringList = strings.filter({ $0 == "a" })
  }
}
